Fix #1 Make screenshot image scale down on small displays

--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -335,4 +335,6 @@ body {
   border-radius: 5px;
   border: 1px solid rgba(255, 255, 255, 0.25);
   box-shadow: 0px 0px 40px #001;
+  max-width: 100%;
+  max-height: 171px;
 }
